Completed lab eight
:100: :+1: :100:

--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph_main.xml"
-    app:startDestination="@id/mainFragment">
+    app:startDestination="@id/wellcome">
 
     <fragment
         android:id="@+id/mainFragment"
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_mainFragment_to_detailFragment"
             app:destination="@id/detailFragment" />
+        <argument
+            android:name="PokemonsAmount"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/detailFragment"
@@ -20,7 +23,24 @@
         android:label="DetailFragment"
         tools:layout="@layout/fragment_detail">
         <argument
-            android:name="pokemonId"
-            app:argType="integer" />
+            android:name="FrontShiny"
+            app:argType="string" />
+        <argument
+            android:name="BackShiny"
+            app:argType="string" />
+        <argument
+            android:name="Front"
+            app:argType="string" />
+        <argument
+            android:name="Back"
+            app:argType="string" />
+    </fragment>
+    <fragment
+        android:id="@+id/wellcome"
+        android:name="gt.uvg.pokelist.view.Wellcome"
+        android:label="Wellcome" >
+        <action
+            android:id="@+id/action_wellcome_to_mainFragment"
+            app:destination="@id/mainFragment" />
     </fragment>
 </navigation>
